# message-broker

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/console_messenger/: CMakeLists.txt  Command.hpp  Helpers.cpp  Helpers.hpp  main.cpp
include/message_broker/: BrokerClient.hpp  ClientFactory.hpp  ErrorCode.hpp  Exceptions.hpp  Guid.hpp  IBrokerClient.hpp  Message.hpp
src/client/: BrokerClient.cpp  BrokerClient.hpp  ClientSocket.cpp  ClientSocket.hpp
src/server/: BrokerServer.cpp  BrokerServer.hpp  ClientConnection.hpp  ClientRegistry.cpp  ClientRegistry.hpp  PipePool.cpp  PipePool.hpp  ServerSocket.cpp  ServerSocket.hpp  ThreadPool.cpp  ThreadPool.hpp  main.cpp
src/shared/: Defaults.hpp  Exceptions.hpp  Protocol.hpp  ProtocolIO.cpp  ProtocolIO.hpp  SocketIO.cpp  SocketIO.hpp
src/shared/exceptions/: ProtocolException.hpp
src/shared/io/: PacketIO.cpp  PacketIO.hpp  Pipeline.hpp  ProtocolIO.hpp  SocketIO.cpp  SocketIO.hpp
tests/: BrokerClientTests.cpp  BrokerClientTests.hpp  BrokerConcurrencyTests.cpp  BrokerConcurrencyTests.hpp  BrokerServerTests.cpp  BrokerServerTests.hpp  PacketIOTests.cpp  PacketIOTests.hpp  ProtocolIOTests.cpp  ProtocolIOTests.hpp  ServerSocketTests.cpp  ServerSocketTests.hpp  SocketIOTests.cpp  SocketIOTests.hpp  main.cpp
